# django-back

./: .gitignore  LICENSE  Procfile  db.sqlite3  django_back  idcInputSchema.json  idcSchema.json  pyproject.toml  requirements.txt
books/: admin.py  api.py  forms.py  models.py  semanticSearch.py  serializers.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_auto_20210128_2138.py  0003_remove_bookcategory_user.py
dbackend/: asgi.py  settings.py  urls.py  wsgi.py
