[tool.poetry]
name = "django-back"
version = "0.1.0"
description = "backend for idc"
authors = ["Ian Campbell <ian.campbell.92@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.1"
Django = "^3.1.5"
django-filter = "^2.4.0"
djangorestframework = "^3.12.2"
dj-database-url = "^0.5.0"
django-heroku = "^0.3.1"
psycopg2 = "^2.8.6"
whitenoise = "^5.2.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
